Prod-EU/force-app/main/default/objects/IFU_Mapping__mdt/IFU_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Adding IFU to Distributor Orders containing Receivers</description>
    <label>IFU Mapping</label>
    <pluralLabel>IFUs Mapping</pluralLabel>
</CustomObject>