Prod-EU/force-app/main/default/objects/IFU_Mapping__mdt/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOVALAB IBERICA SAL (SPAIN)</fullName>
                <default>true</default>
                <label>NOVALAB IBERICA SAL (SPAIN)</label>
            </value>
            <value>
                <fullName>PERRIGO ISRAEL AGENCIES LTD</fullName>
            </value>
            <value>
                <fullName>Zkope Health Care (Belgium)</fullName>
            </value>
            <value>
                <fullName>A.IMPORT.CZ SPOL.S R.O.</fullName>
            </value>
            <value>
                <fullName>NORDICINFU CARE AB (Finland)</fullName>
            </value>
            <value>
                <fullName>HAMAD SALEH AL HOMAIZI</fullName>
            </value>
            <value>
                <fullName>ETHITECH PTY LTD</fullName>
            </value>
            <value>
                <fullName>NORDICINFU CARE AB (Norway)</fullName>
            </value>
            <value>
                <fullName>JAFFAR PHARMACY</fullName>
            </value>
            <value>
                <fullName>Dinno Sante</fullName>
            </value>
            <value>
                <fullName>AL AMAD DRUGSTORE</fullName>
            </value>
            <value>
                <fullName>EBN SINA MEDICAL</fullName>
            </value>
            <value>
                <fullName>CELKI MEDICAL COMPANY</fullName>
            </value>
            <value>
                <fullName>Proglikemia Sp. Z o.o.</fullName>
            </value>
            <value>
                <fullName>SCIENTIFIC PHARMACY</fullName>
            </value>
            <value>
                <fullName>NORDICINFU CARE AB (Sweden)</fullName>
            </value>
            <value>
                <fullName>ZKOPE HEALTH CARE</fullName>
            </value>
            <value>
                <fullName>THERAS LIFETECH S.R.L</fullName>
            </value>
            <value>
                <fullName>NORDICINFU CARE AB (Denmark)</fullName>
            </value>
            <value>
                <fullName>GULF PHARMACEUTICAL INDUSTRIES (JULPHAR)</fullName>
            </value>
            <value>
                <fullName>AUSTRALASIAN MEDICAL &amp; SCIENTIFIC LTD</fullName>
            </value>
            <value>
                <fullName>PHARMANET DRUGSTORE</fullName>
            </value>
            <value>
                <fullName>NEW ZEALAND MEDICAL &amp; SCIENTIFIC</fullName>
            </value>
            <value>
                <fullName>CIGALAH GROUP WAREHOUSE</fullName>
            </value>
            <value>
                <fullName>MEDSALUS SAGLIK HIZMETLERI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>