Prod-EU/force-app/main/default/objects/IFU_Mapping__mdt/fields/IFU__c.field-meta.xml
<CustomField>
    <fullName>IFU__c</fullName>
    <description>IFU</description>
    <label>IFU</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>