Prod-EU/force-app/main/default/objects/IFU_Mapping__mdt/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <label>Pricebook</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novalab Iberic S.A.L, Madrid, Spain - STANDARD</fullName>
                <default>true</default>
                <label>Novalab Iberic S.A.L, Madrid, Spain - STANDARD</label>
            </value>
            <value>
                <fullName>Perrigo Israel Agencies LTD - STANDARD</fullName>
            </value>
            <value>
                <fullName>Zkope Health Care (Belgium) - Standard</fullName>
            </value>
            <value>
                <fullName>A.IMPORT.CZ, Czech Republic - STANDARD</fullName>
            </value>
            <value>
                <fullName>NORDICINFU CARE AB (Finland) - Standard</fullName>
            </value>
            <value>
                <fullName>GULF PHARMACEUTICAL INDUSTRIES (Kuwait) - Standard</fullName>
            </value>
            <value>
                <fullName>Ethitech Pty Ltd - STANDARD</fullName>
            </value>
            <value>
                <fullName>NORDICINFU CARE AB (Norway) - Standard</fullName>
            </value>
            <value>
                <fullName>GULF PHARMACEUTICAL INDUSTRIES (Bahrain) - Standard</fullName>
            </value>
            <value>
                <fullName>DINNO SANTE - STANDARD</fullName>
            </value>
            <value>
                <fullName>GULF PHARMACEUTICAL INDUSTRIES (Jordan) - Standard</fullName>
            </value>
            <value>
                <fullName>GULF PHARMACEUTICAL INDUSTRIES (Qatar) - Standard</fullName>
            </value>
            <value>
                <fullName>Celki Medical Company - STANDARD</fullName>
            </value>
            <value>
                <fullName>Proglikemia Sp. Z o.o. - STANDARD</fullName>
            </value>
            <value>
                <fullName>GULF PHARMACEUTICAL INDUSTRIES (Oman) - Standard</fullName>
            </value>
            <value>
                <fullName>NORDICINFU CARE AB (Sweden) - Standard</fullName>
            </value>
            <value>
                <fullName>Zkope Health Care - Standard</fullName>
            </value>
            <value>
                <fullName>THERAS LIFETECH S.R.L - Standard</fullName>
            </value>
            <value>
                <fullName>NORDICINFU CARE AB (Denmark) - Standard</fullName>
            </value>
            <value>
                <fullName>GULF PHARMACEUTICAL INDUSTRIES (UAE) - Standard</fullName>
            </value>
            <value>
                <fullName>AMSL (AUSTRALASIAN MEDICAL &amp; SCIENTIFIC LTD) - STANDARD</fullName>
            </value>
            <value>
                <fullName>GULF PHARMACEUTICAL INDUSTRIES (Lebanon) - Standard</fullName>
            </value>
            <value>
                <fullName>NEW ZEALAND MEDICAL &amp; SCIENTIFIC LTD - STANDARD</fullName>
            </value>
            <value>
                <fullName>GULF PHARMACEUTICAL INDUSTRIES (KSA) - Standard</fullName>
            </value>
            <value>
                <fullName>MEDSALUS Saglik Hiz Tic Ltd Sti - STANDARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>