Prod-EU/force-app/main/default/objects/IFU_Mapping__mdt/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>Pricebook</description>
    <label>SKU</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>