Prod-EU/force-app/main/default/objects/IFU_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIST SALES SAMPLE</fullName>
            </value>
            <value>
                <fullName>DIST STANDARD</fullName>
                <default>true</default>
                <label>DIST STANDARD</label>
            </value>
            <value>
                <fullName>CH STANDARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>